# redis-client-gui

./: .gitignore  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
redisclient/: command_dialog.py  connection_dialog.py  graphwidget.py  mainwindow.py  redis_client.py
rediswidgets/: attrs_widget.py  logger.py  pubsub_widget.py  tag_monitor.py  tree_widget.py  utils.py  value_editor_dialog.py
tests/: conftest.py  test_attrs_widget.py  test_command_dialog.py  test_connection_dialog.py  test_graphwidget.py  test_mainwindow.py  test_pubsub_widget.py  test_redis_client.py  test_tag_monitor.py  test_tree_widget.py
